tasks/bench/tt/en_parser.tt
require 'treetop'
require 'treetop/runtime'
require 'treetop/ruby_extensions'

require 'tt/feature'
require 'tt/table'

module Cuke
  module Parser
    module I18n
      grammar En
        include Feature
        include Table

        rule feature
          feature_sub
        end

        rule background_keyword
          ("Background") ':'
        end

        rule scenario_keyword
          ("Scenario") ':'
        end

        rule scenario_outline_keyword
          ("Scenario Outline") ':'
        end

        rule step_keyword
          ("Given") /
          ("When") /
          ("Then") /
          ("And") /
          ("But")
        end

        rule keyword_space
          'space+'
        end

        rule examples_keyword
          ("Examples") ':'?
        end
      end
    end
  end
end
